--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "dev": "tsnd --respawn --transpile-only src/index.ts"
   },
   "dependencies": {
+    "cors": "^2.8.5",
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
     "jsonwebtoken": "^8.5.1",
@@ -14,6 +15,7 @@
     "process": "^0.11.10"
   },
   "devDependencies": {
+    "@types/cors": "^2.8.10",
     "@types/express": "^4.17.12",
     "@types/jsonwebtoken": "^8.5.2",
     "ts-node-dev": "^1.1.6",
